# sentinal

./: .gitignore  Anchor.toml  DEMO.md  README.md  package-lock.json  package.json
app/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
app/src/: App.tsx  Chart.tsx  Landing.tsx  chain.ts  config.ts  demo-config.json  icons.tsx  main.tsx  sentinel.ts
app/src/idl/: flash_stub.json  sentinel.json
programs/flash_stub/: Cargo.toml
programs/flash_stub/src/: lib.rs
programs/sentinel/: Cargo.toml
programs/sentinel/src/: constants.rs  error.rs  instructions.rs  lib.rs  state.rs
programs/sentinel/src/instructions/: cancel_guard.rs  commit_guard.rs  delegate_guard.rs  evaluate.rs  execute_entry.rs  execute_protection.rs  follow_strategy.rs  grid.rs  initialize_vault.rs  open_protected_position.rs  portfolio.rs  publish_strategy.rs  push_price.rs  push_price_from_pyth.rs  register_guard.rs  schedule_monitor.rs  withdraw_vault.rs
scripts/: demo-driver.ts  keeper.ts  notifier.ts
tests/: sentinel-copytrade.ts  sentinel-er-flow.ts  sentinel-grid.ts  sentinel-orders.ts  sentinel-round2.ts  sentinel-round3.ts  sentinel-settlement-local.ts  sentinel-settlement-slice.ts  sentinel-trailing.ts
