[package]
name = "flash_stub"
version = "0.1.0"
description = "Flash-interface-faithful settlement harness for Sentinel demos"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "flash_stub"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "1.0.2", features = ["init-if-needed"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
